TP4/obj/TP4.output
Rules useless in parser due to conflicts

   31 miniProgramaC: /* empty */


State 0 conflicts: 34 shift/reduce, 35 reduce/reduce
State 1 conflicts: 35 reduce/reduce
State 31 conflicts: 1 shift/reduce
State 37 conflicts: 34 shift/reduce, 35 reduce/reduce
State 38 conflicts: 34 shift/reduce, 35 reduce/reduce
State 39 conflicts: 1 shift/reduce
State 41 conflicts: 2 shift/reduce
State 42 conflicts: 34 shift/reduce, 35 reduce/reduce
State 43 conflicts: 34 shift/reduce, 35 reduce/reduce
State 44 conflicts: 32 shift/reduce
State 54 conflicts: 2 shift/reduce
State 55 conflicts: 1 shift/reduce
State 56 conflicts: 2 shift/reduce
State 57 conflicts: 4 shift/reduce
State 58 conflicts: 2 shift/reduce
State 59 conflicts: 4 shift/reduce
State 76 conflicts: 3 shift/reduce
State 80 conflicts: 1 reduce/reduce
State 89 conflicts: 3 shift/reduce
State 90 conflicts: 3 shift/reduce
State 97 conflicts: 34 shift/reduce, 35 reduce/reduce
State 100 conflicts: 34 shift/reduce, 35 reduce/reduce
State 132 conflicts: 3 shift/reduce
State 136 conflicts: 1 shift/reduce
State 138 conflicts: 1 shift/reduce
State 159 conflicts: 1 shift/reduce
State 167 conflicts: 1 shift/reduce
State 169 conflicts: 2 shift/reduce
State 170 conflicts: 4 shift/reduce
State 171 conflicts: 4 shift/reduce
State 172 conflicts: 2 shift/reduce
State 173 conflicts: 2 shift/reduce
State 178 conflicts: 3 shift/reduce
State 179 conflicts: 3 shift/reduce
State 180 conflicts: 3 shift/reduce
State 181 conflicts: 3 shift/reduce
State 193 conflicts: 1 shift/reduce
State 212 conflicts: 1 shift/reduce
State 235 conflicts: 1 shift/reduce


Grammar

    0 $accept: input $end

    1 input: miniProgramaC
    2      | programaC

    3 programaC: directivas prototipo main funciones

    4 directivas: '#' INCLUDE STDIO variasDirectivas

    5 variasDirectivas: /* empty */
    6                 | directiva variasDirectivas

    7 directiva: '#' INCLUDE LIBRERIA
    8          | '#' DEFINE IDENTIFICADOR constante

    9 prototipo: variasDeclaraciones

   10 main: encabezado cuerpo

   11 encabezado: INT_MAIN '(' ')'

   12 cuerpo: sentCompuesta

   13 funciones: /* empty */
   14          | definicionFuncion funciones

   15 $@1: /* empty */

   16 definicionFuncion: TIPO_DATO IDENTIFICADOR '(' listaTipoParametros ')' $@1 sentCompuesta

   17 $@2: /* empty */

   18 definicionFuncion: TIPO_DATO IDENTIFICADOR '(' ')' $@2 sentCompuesta
   19                  | TIPO_DATO IDENTIFICADOR '(' listaTipoParametros ')' ';'
   20                  | TIPO_DATO IDENTIFICADOR '(' ')' ';'

   21 parametrosFuncion: /* empty */
   22                  | listaTipoParametros

   23 listaTipoParametros: declaracionParametro
   24                    | listaTipoParametros ',' declaracionParametro

   25 declaracionParametro: TIPO_DATO nombreParam
   26                     | TIPO_DATO

   27 $@3: /* empty */

   28 nombreParam: IDENTIFICADOR $@3 nombreParamExpConst

   29 nombreParamExpConst: /* empty */
   30                    | '[' expConstante ']' nombreParamExpConst

   31 miniProgramaC: /* empty */
   32              | variasDeclaraciones miniProgramaC
   33              | variasSentencias miniProgramaC
   34              | funciones miniProgramaC
   35              | directivas miniProgramaC

   36 declarador: IDENTIFICADOR declaArray
   37           | IDENTIFICADOR
   38           | IDENTIFICADOR '(' parametrosFuncion ')'

   39 declaArray: '[' expConstante ']'
   40           | '[' expConstante ']' declaArray

   41 declaracion: TIPO_DATO inicializacionDecla ';'
   42            | TIPO_DATO '*' inicializacionDecla ';'
   43            | error

   44 inicializacionDecla: declarador declaradorFactorizado
   45                    | inicializacionDecla ',' declarador

   46 declaradorFactorizado: /* empty */
   47                      | '=' inicializador

   48 inicializador: expCondicional
   49              | inciaArray

   50 inciaArray: '{' inicializadorLista '}'
   51           | '{' inicializadorLista ',' '}'

   52 inicializadorLista: inicializador
   53                   | inicializadorLista ',' inicializador

   54 variasDeclaraciones: /* empty */
   55                    | declaracion variasDeclaraciones

   56 variasSentencias: /* empty */
   57                 | sentencia variasSentencias

   58 sentencia: sentExpresion
   59          | sentEtiquetada
   60          | sentCompuesta
   61          | sentSeleccion
   62          | sentIteracion
   63          | sentSalto
   64          | ERROR_LEX

   65 sentCompuesta: '{' variasDeclaraciones variasSentencias '}'
   66              | error

   67 sentExpresion: ';'
   68              | expresion ';'

   69 sentSeleccion: IF '(' expresion ')' sentencia segundaParteIf
   70              | SWITCH '(' expresion ')' sentencia

   71 segundaParteIf: /* empty */
   72               | ELSE sentencia

   73 sentIteracion: WHILE '(' expresion ')' sentencia
   74              | DO sentencia WHILE '(' expresion ')' ';'
   75              | FOR '(' expOVacio ';' expOVacio ';' expOVacio ')' sentencia

   76 sentSalto: GOTO IDENTIFICADOR ';'
   77          | CONTINUE ';'
   78          | BREAK ';'
   79          | RETURN expOVacio ';'

   80 sentEtiquetada: IDENTIFICADOR ':' sentencia
   81               | CASE expConstante ':' sentencia
   82               | DEFAULT ':' sentencia

   83 expOVacio: /* empty */
   84          | expresion

   85 expresion: expAsignacion
   86          | expresion ',' expAsignacion
   87          | error

   88 expAsignacion: expCondicional
   89              | expUnaria operAsignacion expAsignacion

   90 operAsignacion: '='
   91               | OPER_ASIGNACION

   92 expConstante: /* empty */
   93             | expCondicional

   94 expCondicional: expOr
   95               | expOr '?' expresion ':' expCondicional

   96 expOr: expAnd
   97      | expOr OR expAnd

   98 expAnd: expIgualdad
   99       | expAnd AND expIgualdad

  100 expIgualdad: expRelacional
  101            | expIgualdad IGUALDAD expRelacional
  102            | expIgualdad DESIGUALDAD expRelacional

  103 expRelacional: expAditiva
  104              | expRelacional MAYOR_IGUAL expAditiva
  105              | expRelacional '>' expAditiva
  106              | expRelacional MENOR_IGUAL expAditiva
  107              | expRelacional '<' expAditiva

  108 expAditiva: expMultiplicativa
  109           | expAditiva '+' expMultiplicativa
  110           | expAditiva '-' expMultiplicativa

  111 expMultiplicativa: expUnaria
  112                  | expMultiplicativa '*' expUnaria
  113                  | expMultiplicativa '/' expUnaria
  114                  | expMultiplicativa '%' expUnaria
  115                  | expMultiplicativa '^' expUnaria

  116 expUnaria: expPostfijo
  117          | DOBLE_MAS expUnaria
  118          | DOBLE_MENOS expUnaria
  119          | operUnario expUnaria
  120          | SIZE_OF '(' expPostfijo ')'
  121          | SIZE_OF '(' TIPO_DATO ')'

  122 operUnario: '&'
  123           | '*'
  124           | '+'
  125           | '-'
  126           | '~'
  127           | '!'

  128 expPostfijo: expPrimaria expPostfijoFactorizada
  129            | expUnaria expUnariaFactorizada expPostfijoFactorizada

  130 expUnariaFactorizada: ARROW IDENTIFICADOR
  131                     | DOBLE_MAS
  132                     | DOBLE_MENOS

  133 expPostfijoFactorizada: /* empty */
  134                       | declaArray declaradorFactorizado
  135                       | '(' listaArgumentos ')' expPostfijoFactorizada
  136                       | '.' IDENTIFICADOR expPostfijoFactorizada

  137 listaArgumentos: /* empty */
  138                | expPrimaria
  139                | listaArgumentos ',' expPrimaria

  140 expPrimaria: IDENTIFICADOR
  141            | constante
  142            | LITERAL_CADENA
  143            | '(' expresion ')'

  144 constante: constanteEntera
  145          | CTE_CHAR
  146          | REAL

  147 constanteEntera: DECIMAL
  148                | OCTAL
  149                | HEXADECIMAL


Terminals, with rules where they appear

$end (0) 0
'!' (33) 127
'#' (35) 4 7 8
'%' (37) 114
'&' (38) 122
'(' (40) 11 16 18 19 20 38 69 70 73 74 75 120 121 135 143
')' (41) 11 16 18 19 20 38 69 70 73 74 75 120 121 135 143
'*' (42) 42 112 123
'+' (43) 109 124
',' (44) 24 45 51 53 86 139
'-' (45) 110 125
'.' (46) 136
'/' (47) 113
':' (58) 80 81 82 95
';' (59) 19 20 41 42 67 68 74 75 76 77 78 79
'<' (60) 107
'=' (61) 47 90
'>' (62) 105
'?' (63) 95
'[' (91) 30 39 40
']' (93) 30 39 40
'^' (94) 115
'{' (123) 50 51 65
'}' (125) 50 51 65
'~' (126) 126
error (256) 43 66 87
TIPO_DATO (258) 16 18 19 20 25 26 41 42 121
IDENTIFICADOR (259) 8 16 18 19 20 28 36 37 38 76 80 130 136 140
DECIMAL (260) 147
OCTAL (261) 148
HEXADECIMAL (262) 149
CTE_CHAR (263) 145
LITERAL_CADENA (264) 142
REAL (265) 146
ERROR_LEX (266) 64
SIZE_OF (267) 120 121
INT_MAIN (268) 11
INCLUDE (269) 4 7
DEFINE (270) 8
DEFAULT (271) 82
CASE (272) 81
IF (273) 69
ELSE (274) 72
SWITCH (275) 70
WHILE (276) 73 74
DO (277) 74
FOR (278) 75
GOTO (279) 76
CONTINUE (280) 77
RETURN (281) 79
BREAK (282) 78
MAYOR_IGUAL (283) 104
MENOR_IGUAL (284) 106
IGUALDAD (285) 101
DESIGUALDAD (286) 102
AND (287) 99
OR (288) 97
DOBLE_MAS (289) 117 131
DOBLE_MENOS (290) 118 132
ARROW (291) 130
OPER_ASIGNACION (292) 91
STDIO (293) 4
LIBRERIA (294) 7


Nonterminals, with rules where they appear

$accept (64)
    on left: 0
input (65)
    on left: 1 2, on right: 0
programaC (66)
    on left: 3, on right: 2
directivas (67)
    on left: 4, on right: 3 35
variasDirectivas (68)
    on left: 5 6, on right: 4 6
directiva (69)
    on left: 7 8, on right: 6
prototipo (70)
    on left: 9, on right: 3
main (71)
    on left: 10, on right: 3
encabezado (72)
    on left: 11, on right: 10
cuerpo (73)
    on left: 12, on right: 10
funciones (74)
    on left: 13 14, on right: 3 14 34
definicionFuncion (75)
    on left: 16 18 19 20, on right: 14
$@1 (76)
    on left: 15, on right: 16
$@2 (77)
    on left: 17, on right: 18
parametrosFuncion (78)
    on left: 21 22, on right: 38
listaTipoParametros (79)
    on left: 23 24, on right: 16 19 22 24
declaracionParametro (80)
    on left: 25 26, on right: 23 24
nombreParam (81)
    on left: 28, on right: 25
$@3 (82)
    on left: 27, on right: 28
nombreParamExpConst (83)
    on left: 29 30, on right: 28 30
miniProgramaC (84)
    on left: 31 32 33 34 35, on right: 1 32 33 34 35
declarador (85)
    on left: 36 37 38, on right: 44 45
declaArray (86)
    on left: 39 40, on right: 36 40 134
declaracion (87)
    on left: 41 42 43, on right: 55
inicializacionDecla (88)
    on left: 44 45, on right: 41 42 45
declaradorFactorizado (89)
    on left: 46 47, on right: 44 134
inicializador (90)
    on left: 48 49, on right: 47 52 53
inciaArray (91)
    on left: 50 51, on right: 49
inicializadorLista (92)
    on left: 52 53, on right: 50 51 53
variasDeclaraciones (93)
    on left: 54 55, on right: 9 32 55 65
variasSentencias (94)
    on left: 56 57, on right: 33 57 65
sentencia (95)
    on left: 58 59 60 61 62 63 64, on right: 57 69 70 72 73 74 75 80
    81 82
sentCompuesta (96)
    on left: 65 66, on right: 12 16 18 60
sentExpresion (97)
    on left: 67 68, on right: 58
sentSeleccion (98)
    on left: 69 70, on right: 61
segundaParteIf (99)
    on left: 71 72, on right: 69
sentIteracion (100)
    on left: 73 74 75, on right: 62
sentSalto (101)
    on left: 76 77 78 79, on right: 63
sentEtiquetada (102)
    on left: 80 81 82, on right: 59
expOVacio (103)
    on left: 83 84, on right: 75 79
expresion (104)
    on left: 85 86 87, on right: 68 69 70 73 74 84 86 95 143
expAsignacion (105)
    on left: 88 89, on right: 85 86 89
operAsignacion (106)
    on left: 90 91, on right: 89
expConstante (107)
    on left: 92 93, on right: 30 39 40 81
expCondicional (108)
    on left: 94 95, on right: 48 88 93 95
expOr (109)
    on left: 96 97, on right: 94 95 97
expAnd (110)
    on left: 98 99, on right: 96 97 99
expIgualdad (111)
    on left: 100 101 102, on right: 98 99 101 102
expRelacional (112)
    on left: 103 104 105 106 107, on right: 100 101 102 104 105 106
    107
expAditiva (113)
    on left: 108 109 110, on right: 103 104 105 106 107 109 110
expMultiplicativa (114)
    on left: 111 112 113 114 115, on right: 108 109 110 112 113 114
    115
expUnaria (115)
    on left: 116 117 118 119 120 121, on right: 89 111 112 113 114
    115 117 118 119 129
operUnario (116)
    on left: 122 123 124 125 126 127, on right: 119
expPostfijo (117)
    on left: 128 129, on right: 116 120
expUnariaFactorizada (118)
    on left: 130 131 132, on right: 129
expPostfijoFactorizada (119)
    on left: 133 134 135 136, on right: 128 129 135 136
listaArgumentos (120)
    on left: 137 138 139, on right: 135 139
expPrimaria (121)
    on left: 140 141 142 143, on right: 128 138 139
constante (122)
    on left: 144 145 146, on right: 8 141
constanteEntera (123)
    on left: 147 148 149, on right: 144


state 0

    0 $accept: . input $end

    error           shift, and go to state 1
    TIPO_DATO       shift, and go to state 2
    IDENTIFICADOR   shift, and go to state 3
    DECIMAL         shift, and go to state 4
    OCTAL           shift, and go to state 5
    HEXADECIMAL     shift, and go to state 6
    CTE_CHAR        shift, and go to state 7
    LITERAL_CADENA  shift, and go to state 8
    REAL            shift, and go to state 9
    ERROR_LEX       shift, and go to state 10
    SIZE_OF         shift, and go to state 11
    DEFAULT         shift, and go to state 12
    CASE            shift, and go to state 13
    IF              shift, and go to state 14
    SWITCH          shift, and go to state 15
    WHILE           shift, and go to state 16
    DO              shift, and go to state 17
    FOR             shift, and go to state 18
    GOTO            shift, and go to state 19
    CONTINUE        shift, and go to state 20
    RETURN          shift, and go to state 21
    BREAK           shift, and go to state 22
    DOBLE_MAS       shift, and go to state 23
    DOBLE_MENOS     shift, and go to state 24
    '+'             shift, and go to state 25
    '-'             shift, and go to state 26
    '*'             shift, and go to state 27
    '#'             shift, and go to state 28
    '('             shift, and go to state 29
    ';'             shift, and go to state 30
    '{'             shift, and go to state 31
    '&'             shift, and go to state 32
    '~'             shift, and go to state 33
    '!'             shift, and go to state 34

    $end            reduce using rule 13 (funciones)
    $end            [reduce using rule 31 (miniProgramaC)]
    $end            [reduce using rule 54 (variasDeclaraciones)]
    $end            [reduce using rule 56 (variasSentencias)]
    error           [reduce using rule 13 (funciones)]
    error           [reduce using rule 54 (variasDeclaraciones)]
    error           [reduce using rule 56 (variasSentencias)]
    TIPO_DATO       [reduce using rule 13 (funciones)]
    TIPO_DATO       [reduce using rule 54 (variasDeclaraciones)]
    TIPO_DATO       [reduce using rule 56 (variasSentencias)]
    IDENTIFICADOR   [reduce using rule 13 (funciones)]
    IDENTIFICADOR   [reduce using rule 54 (variasDeclaraciones)]
    IDENTIFICADOR   [reduce using rule 56 (variasSentencias)]
    DECIMAL         [reduce using rule 13 (funciones)]
    DECIMAL         [reduce using rule 54 (variasDeclaraciones)]
    DECIMAL         [reduce using rule 56 (variasSentencias)]
    OCTAL           [reduce using rule 13 (funciones)]
    OCTAL           [reduce using rule 54 (variasDeclaraciones)]
    OCTAL           [reduce using rule 56 (variasSentencias)]
    HEXADECIMAL     [reduce using rule 13 (funciones)]
    HEXADECIMAL     [reduce using rule 54 (variasDeclaraciones)]
    HEXADECIMAL     [reduce using rule 56 (variasSentencias)]
    CTE_CHAR        [reduce using rule 13 (funciones)]
    CTE_CHAR        [reduce using rule 54 (variasDeclaraciones)]
    CTE_CHAR        [reduce using rule 56 (variasSentencias)]
    LITERAL_CADENA  [reduce using rule 13 (funciones)]
    LITERAL_CADENA  [reduce using rule 54 (variasDeclaraciones)]
    LITERAL_CADENA  [reduce using rule 56 (variasSentencias)]
    REAL            [reduce using rule 13 (funciones)]
    REAL            [reduce using rule 54 (variasDeclaraciones)]
    REAL            [reduce using rule 56 (variasSentencias)]
    ERROR_LEX       [reduce using rule 13 (funciones)]
    ERROR_LEX       [reduce using rule 54 (variasDeclaraciones)]
    ERROR_LEX       [reduce using rule 56 (variasSentencias)]
    SIZE_OF         [reduce using rule 13 (funciones)]
    SIZE_OF         [reduce using rule 54 (variasDeclaraciones)]
    SIZE_OF         [reduce using rule 56 (variasSentencias)]
    DEFAULT         [reduce using rule 13 (funciones)]
    DEFAULT         [reduce using rule 54 (variasDeclaraciones)]
    DEFAULT         [reduce using rule 56 (variasSentencias)]
    CASE            [reduce using rule 13 (funciones)]
    CASE            [reduce using rule 54 (variasDeclaraciones)]
    CASE            [reduce using rule 56 (variasSentencias)]
    IF              [reduce using rule 13 (funciones)]
    IF              [reduce using rule 54 (variasDeclaraciones)]
    IF              [reduce using rule 56 (variasSentencias)]
    SWITCH          [reduce using rule 13 (funciones)]
    SWITCH          [reduce using rule 54 (variasDeclaraciones)]
    SWITCH          [reduce using rule 56 (variasSentencias)]
    WHILE           [reduce using rule 13 (funciones)]
    WHILE           [reduce using rule 54 (variasDeclaraciones)]
    WHILE           [reduce using rule 56 (variasSentencias)]
    DO              [reduce using rule 13 (funciones)]
    DO              [reduce using rule 54 (variasDeclaraciones)]
    DO              [reduce using rule 56 (variasSentencias)]
    FOR             [reduce using rule 13 (funciones)]
    FOR             [reduce using rule 54 (variasDeclaraciones)]
    FOR             [reduce using rule 56 (variasSentencias)]
    GOTO            [reduce using rule 13 (funciones)]
    GOTO            [reduce using rule 54 (variasDeclaraciones)]
    GOTO            [reduce using rule 56 (variasSentencias)]
    CONTINUE        [reduce using rule 13 (funciones)]
    CONTINUE        [reduce using rule 54 (variasDeclaraciones)]
    CONTINUE        [reduce using rule 56 (variasSentencias)]
    RETURN          [reduce using rule 13 (funciones)]
    RETURN          [reduce using rule 54 (variasDeclaraciones)]
    RETURN          [reduce using rule 56 (variasSentencias)]
    BREAK           [reduce using rule 13 (funciones)]
    BREAK           [reduce using rule 54 (variasDeclaraciones)]
    BREAK           [reduce using rule 56 (variasSentencias)]
    DOBLE_MAS       [reduce using rule 13 (funciones)]
    DOBLE_MAS       [reduce using rule 54 (variasDeclaraciones)]
    DOBLE_MAS       [reduce using rule 56 (variasSentencias)]
    DOBLE_MENOS     [reduce using rule 13 (funciones)]
    DOBLE_MENOS     [reduce using rule 54 (variasDeclaraciones)]
    DOBLE_MENOS     [reduce using rule 56 (variasSentencias)]
    '+'             [reduce using rule 13 (funciones)]
    '+'             [reduce using rule 54 (variasDeclaraciones)]
    '+'             [reduce using rule 56 (variasSentencias)]
    '-'             [reduce using rule 13 (funciones)]
    '-'             [reduce using rule 54 (variasDeclaraciones)]
    '-'             [reduce using rule 56 (variasSentencias)]
    '*'             [reduce using rule 13 (funciones)]
    '*'             [reduce using rule 54 (variasDeclaraciones)]
    '*'             [reduce using rule 56 (variasSentencias)]
    '#'             [reduce using rule 13 (funciones)]
    '#'             [reduce using rule 54 (variasDeclaraciones)]
    '#'             [reduce using rule 56 (variasSentencias)]
    '('             [reduce using rule 13 (funciones)]
    '('             [reduce using rule 54 (variasDeclaraciones)]
    '('             [reduce using rule 56 (variasSentencias)]
    ';'             [reduce using rule 13 (funciones)]
    ';'             [reduce using rule 54 (variasDeclaraciones)]
    ';'             [reduce using rule 56 (variasSentencias)]
    '{'             [reduce using rule 13 (funciones)]
    '{'             [reduce using rule 54 (variasDeclaraciones)]
    '{'             [reduce using rule 56 (variasSentencias)]
    '&'             [reduce using rule 13 (funciones)]
    '&'             [reduce using rule 54 (variasDeclaraciones)]
    '&'             [reduce using rule 56 (variasSentencias)]
    '~'             [reduce using rule 13 (funciones)]
    '~'             [reduce using rule 54 (variasDeclaraciones)]
    '~'             [reduce using rule 56 (variasSentencias)]
    '!'             [reduce using rule 13 (funciones)]
    '!'             [reduce using rule 54 (variasDeclaraciones)]
    '!'             [reduce using rule 56 (variasSentencias)]

    input                go to state 35
    programaC            go to state 36
    directivas           go to state 37
    funciones            go to state 38
    definicionFuncion    go to state 39
    miniProgramaC        go to state 40
    declaracion          go to state 41
    variasDeclaraciones  go to state 42
    variasSentencias     go to state 43
    sentencia            go to state 44
    sentCompuesta        go to state 45
    sentExpresion        go to state 46
    sentSeleccion        go to state 47
    sentIteracion        go to state 48
    sentSalto            go to state 49
    sentEtiquetada       go to state 50
    expresion            go to state 51
    expAsignacion        go to state 52
    expCondicional       go to state 53
    expOr                go to state 54
    expAnd               go to state 55
    expIgualdad          go to state 56
    expRelacional        go to state 57
    expAditiva           go to state 58
    expMultiplicativa    go to state 59
    expUnaria            go to state 60
    operUnario           go to state 61
    expPostfijo          go to state 62
    expPrimaria          go to state 63
    constante            go to state 64
    constanteEntera      go to state 65


state 1

   43 declaracion: error .
   66 sentCompuesta: error .
   87 expresion: error .

    $end            reduce using rule 43 (declaracion)
    $end            [reduce using rule 66 (sentCompuesta)]
    error           reduce using rule 43 (declaracion)
    error           [reduce using rule 66 (sentCompuesta)]
    TIPO_DATO       reduce using rule 43 (declaracion)
    TIPO_DATO       [reduce using rule 66 (sentCompuesta)]
    IDENTIFICADOR   reduce using rule 43 (declaracion)
    IDENTIFICADOR   [reduce using rule 66 (sentCompuesta)]
    DECIMAL         reduce using rule 43 (declaracion)
    DECIMAL         [reduce using rule 66 (sentCompuesta)]
    OCTAL           reduce using rule 43 (declaracion)
    OCTAL           [reduce using rule 66 (sentCompuesta)]
    HEXADECIMAL     reduce using rule 43 (declaracion)
    HEXADECIMAL     [reduce using rule 66 (sentCompuesta)]
    CTE_CHAR        reduce using rule 43 (declaracion)
    CTE_CHAR        [reduce using rule 66 (sentCompuesta)]
    LITERAL_CADENA  reduce using rule 43 (declaracion)
    LITERAL_CADENA  [reduce using rule 66 (sentCompuesta)]
    REAL            reduce using rule 43 (declaracion)
    REAL            [reduce using rule 66 (sentCompuesta)]
    ERROR_LEX       reduce using rule 43 (declaracion)
    ERROR_LEX       [reduce using rule 66 (sentCompuesta)]
    SIZE_OF         reduce using rule 43 (declaracion)
    SIZE_OF         [reduce using rule 66 (sentCompuesta)]
    DEFAULT         reduce using rule 43 (declaracion)
    DEFAULT         [reduce using rule 66 (sentCompuesta)]
    CASE            reduce using rule 43 (declaracion)
    CASE            [reduce using rule 66 (sentCompuesta)]
    IF              reduce using rule 43 (declaracion)
    IF              [reduce using rule 66 (sentCompuesta)]
    SWITCH          reduce using rule 43 (declaracion)
    SWITCH          [reduce using rule 66 (sentCompuesta)]
    WHILE           reduce using rule 43 (declaracion)
    WHILE           [reduce using rule 66 (sentCompuesta)]
    DO              reduce using rule 43 (declaracion)
    DO              [reduce using rule 66 (sentCompuesta)]
    FOR             reduce using rule 43 (declaracion)
    FOR             [reduce using rule 66 (sentCompuesta)]
    GOTO            reduce using rule 43 (declaracion)
    GOTO            [reduce using rule 66 (sentCompuesta)]
    CONTINUE        reduce using rule 43 (declaracion)
    CONTINUE        [reduce using rule 66 (sentCompuesta)]
    RETURN          reduce using rule 43 (declaracion)
    RETURN          [reduce using rule 66 (sentCompuesta)]
    BREAK           reduce using rule 43 (declaracion)
    BREAK           [reduce using rule 66 (sentCompuesta)]
    DOBLE_MAS       reduce using rule 43 (declaracion)
    DOBLE_MAS       [reduce using rule 66 (sentCompuesta)]
    DOBLE_MENOS     reduce using rule 43 (declaracion)
    DOBLE_MENOS     [reduce using rule 66 (sentCompuesta)]
    ','             reduce using rule 87 (expresion)
    '+'             reduce using rule 43 (declaracion)
    '+'             [reduce using rule 66 (sentCompuesta)]
    '-'             reduce using rule 43 (declaracion)
    '-'             [reduce using rule 66 (sentCompuesta)]
    '*'             reduce using rule 43 (declaracion)
    '*'             [reduce using rule 66 (sentCompuesta)]
    '#'             reduce using rule 43 (declaracion)
    '#'             [reduce using rule 66 (sentCompuesta)]
    '('             reduce using rule 43 (declaracion)
    '('             [reduce using rule 66 (sentCompuesta)]
    ';'             reduce using rule 43 (declaracion)
    ';'             [reduce using rule 66 (sentCompuesta)]
    ';'             [reduce using rule 87 (expresion)]
    '{'             reduce using rule 43 (declaracion)
    '{'             [reduce using rule 66 (sentCompuesta)]
    '&'             reduce using rule 43 (declaracion)
    '&'             [reduce using rule 66 (sentCompuesta)]
    '~'             reduce using rule 43 (declaracion)
    '~'             [reduce using rule 66 (sentCompuesta)]
    '!'             reduce using rule 43 (declaracion)
    '!'             [reduce using rule 66 (sentCompuesta)]
    $default        reduce using rule 43 (declaracion)


state 2

   16 definicionFuncion: TIPO_DATO . IDENTIFICADOR '(' listaTipoParametros ')' $@1 sentCompuesta
   18                  | TIPO_DATO . IDENTIFICADOR '(' ')' $@2 sentCompuesta
   19                  | TIPO_DATO . IDENTIFICADOR '(' listaTipoParametros ')' ';'
   20                  | TIPO_DATO . IDENTIFICADOR '(' ')' ';'
   41 declaracion: TIPO_DATO . inicializacionDecla ';'
   42            | TIPO_DATO . '*' inicializacionDecla ';'

    IDENTIFICADOR  shift, and go to state 66
    '*'            shift, and go to state 67

    declarador           go to state 68
    inicializacionDecla  go to state 69


state 3

   80 sentEtiquetada: IDENTIFICADOR . ':' sentencia
  140 expPrimaria: IDENTIFICADOR .

    ':'  shift, and go to state 70

    $default  reduce using rule 140 (expPrimaria)


state 4

  147 constanteEntera: DECIMAL .

    $default  reduce using rule 147 (constanteEntera)


state 5

  148 constanteEntera: OCTAL .

    $default  reduce using rule 148 (constanteEntera)


state 6

  149 constanteEntera: HEXADECIMAL .

    $default  reduce using rule 149 (constanteEntera)


state 7

  145 constante: CTE_CHAR .

    $default  reduce using rule 145 (constante)


state 8

  142 expPrimaria: LITERAL_CADENA .

    $default  reduce using rule 142 (expPrimaria)


state 9

  146 constante: REAL .

    $default  reduce using rule 146 (constante)


state 10

   64 sentencia: ERROR_LEX .

    $default  reduce using rule 64 (sentencia)


state 11

  120 expUnaria: SIZE_OF . '(' expPostfijo ')'
  121          | SIZE_OF . '(' TIPO_DATO ')'

    '('  shift, and go to state 71


state 12

   82 sentEtiquetada: DEFAULT . ':' sentencia

    ':'  shift, and go to state 72


state 13

   81 sentEtiquetada: CASE . expConstante ':' sentencia

    IDENTIFICADOR   shift, and go to state 73
    DECIMAL         shift, and go to state 4
    OCTAL           shift, and go to state 5
    HEXADECIMAL     shift, and go to state 6
    CTE_CHAR        shift, and go to state 7
    LITERAL_CADENA  shift, and go to state 8
    REAL            shift, and go to state 9
    SIZE_OF         shift, and go to state 11
    DOBLE_MAS       shift, and go to state 23
    DOBLE_MENOS     shift, and go to state 24
    '+'             shift, and go to state 25
    '-'             shift, and go to state 26
    '*'             shift, and go to state 27
    '('             shift, and go to state 29
    '&'             shift, and go to state 32
    '~'             shift, and go to state 33
    '!'             shift, and go to state 34

    $default  reduce using rule 92 (expConstante)

    expConstante       go to state 74
    expCondicional     go to state 75
    expOr              go to state 54
    expAnd             go to state 55
    expIgualdad        go to state 56
    expRelacional      go to state 57
    expAditiva         go to state 58
    expMultiplicativa  go to state 59
    expUnaria          go to state 76
    operUnario         go to state 61
    expPostfijo        go to state 62
    expPrimaria        go to state 63
    constante          go to state 64
    constanteEntera    go to state 65


state 14

   69 sentSeleccion: IF . '(' expresion ')' sentencia segundaParteIf

    '('  shift, and go to state 77


state 15

   70 sentSeleccion: SWITCH . '(' expresion ')' sentencia

    '('  shift, and go to state 78


state 16

   73 sentIteracion: WHILE . '(' expresion ')' sentencia

    '('  shift, and go to state 79


state 17

   74 sentIteracion: DO . sentencia WHILE '(' expresion ')' ';'

    error           shift, and go to state 80
    IDENTIFICADOR   shift, and go to state 3
    DECIMAL         shift, and go to state 4
    OCTAL           shift, and go to state 5
    HEXADECIMAL     shift, and go to state 6
    CTE_CHAR        shift, and go to state 7
    LITERAL_CADENA  shift, and go to state 8
    REAL            shift, and go to state 9
    ERROR_LEX       shift, and go to state 10
    SIZE_OF         shift, and go to state 11
    DEFAULT         shift, and go to state 12
    CASE            shift, and go to state 13
    IF              shift, and go to state 14
    SWITCH          shift, and go to state 15
    WHILE           shift, and go to state 16
    DO              shift, and go to state 17
    FOR             shift, and go to state 18
    GOTO            shift, and go to state 19
    CONTINUE        shift, and go to state 20
    RETURN          shift, and go to state 21
    BREAK           shift, and go to state 22
    DOBLE_MAS       shift, and go to state 23
    DOBLE_MENOS     shift, and go to state 24
    '+'             shift, and go to state 25
    '-'             shift, and go to state 26
    '*'             shift, and go to state 27
    '('             shift, and go to state 29
    ';'             shift, and go to state 30
    '{'             shift, and go to state 31
    '&'             shift, and go to state 32
    '~'             shift, and go to state 33
    '!'             shift, and go to state 34

    sentencia          go to state 81
    sentCompuesta      go to state 45
    sentExpresion      go to state 46
    sentSeleccion      go to state 47
    sentIteracion      go to state 48
    sentSalto          go to state 49
    sentEtiquetada     go to state 50
    expresion          go to state 51
    expAsignacion      go to state 52
    expCondicional     go to state 53
    expOr              go to state 54
    expAnd             go to state 55
    expIgualdad        go to state 56
    expRelacional      go to state 57
    expAditiva         go to state 58
    expMultiplicativa  go to state 59
    expUnaria          go to state 60
    operUnario         go to state 61
    expPostfijo        go to state 62
    expPrimaria        go to state 63
    constante          go to state 64
    constanteEntera    go to state 65


state 18

   75 sentIteracion: FOR . '(' expOVacio ';' expOVacio ';' expOVacio ')' sentencia

    '('  shift, and go to state 82


state 19

   76 sentSalto: GOTO . IDENTIFICADOR ';'

    IDENTIFICADOR  shift, and go to state 83


state 20

   77 sentSalto: CONTINUE . ';'

    ';'  shift, and go to state 84


state 21

   79 sentSalto: RETURN . expOVacio ';'

    error           shift, and go to state 85
    IDENTIFICADOR   shift, and go to state 73
    DECIMAL         shift, and go to state 4
    OCTAL           shift, and go to state 5
    HEXADECIMAL     shift, and go to state 6
    CTE_CHAR        shift, and go to state 7
    LITERAL_CADENA  shift, and go to state 8
    REAL            shift, and go to state 9
    SIZE_OF         shift, and go to state 11
    DOBLE_MAS       shift, and go to state 23
    DOBLE_MENOS     shift, and go to state 24
    '+'             shift, and go to state 25
    '-'             shift, and go to state 26
    '*'             shift, and go to state 27
    '('             shift, and go to state 29
    '&'             shift, and go to state 32
    '~'             shift, and go to state 33
    '!'             shift, and go to state 34

    ';'  reduce using rule 83 (expOVacio)
